--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     display: flex;
     justify-content: center;
     line-height: 1.5;
+    font-family: proxima nova,sans-serif;
 }
 
 
@@ -89,6 +90,16 @@ body {
     margin-bottom: 25px;
 }
 
+.title_date_time {
+    margin-top: 25px;
+    font-size: 30px;
+    margin-bottom: 20px;
+    font-weight: 700;
+    max-width: 400px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .icons__box {
     margin: 0 auto;
     width: 20px;
@@ -113,17 +124,6 @@ body {
     align-items: center;
 }
 
-.fc .fc-daygrid-day-top {
-    align-items: center;
-    justify-content: center;
-}
-
-.fc-daygrid-day-top {
-    display: flex !important;
-    align-items: center !important;
-    justify-content: center !important;
-}
-
 .fc .fc-col-header-cell-cushion {
     color: var(--text-color,rgb(26,26,26));
     font-weight: 400;
@@ -138,6 +138,11 @@ body {
     color: var(--primary-color, rgb(0,105,255)) !important;
     background-color: var(--primary-color-level3,rgba(0,105,255,0.15)) !important;
 }
+
+.fc .fc-button-primary:focus {
+    box-shadow: none !important;
+}
+
 
 .fc .fc-button {
     border: 0px !important ;
@@ -156,7 +161,7 @@ body {
 
 
 .title-time {
-    margin-bottom: 20px;
+    margin-bottom: 45px;
 }
 
 .fc-today-button {
@@ -170,6 +175,60 @@ body {
 .timeslot-list {
     list-style-type: none;
     padding: 0;
+    max-height: 400px;
+    overflow-y: auto;
+}
+
+.timeslot-list {
+    height: 300px; /* Высота контейнера */
+    overflow-y: scroll; /* Включение вертикальной прокрутки */
+}
+
+/* Стилизация самой полосы прокрутки */
+.timeslot-list::-webkit-scrollbar {
+    width: 5px; /* Ширина полосы прокрутки */
+}
+
+/* Стилизация дорожки прокрутки (трека) */
+.timeslot-list::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Цвет фона трека */
+    border-radius: 10px; /* Скругление краёв */
+}
+
+/* Стилизация кнопки прокрутки (thumb) */
+.timeslot-list::-webkit-scrollbar-thumb {
+    background: #bdacac; /* Цвет кнопки прокрутки */
+    border-radius: 10px; /* Скругление краёв */
+}
+
+/* Изменение стиля кнопки прокрутки при наведении */
+.timeslot-list::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Цвет кнопки прокрутки при наведении */
+}
+
+.fc-scroller::-webkit-scrollbar {
+    width: 0px; /* ширина полосы прокрутки */
+}
+
+.fc-daygrid-day-top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Стилизация текста даты */
+.fc-daygrid-day-number {
+    cursor: pointer;
+    width: 44px;
+    height: 44px;
+    color: #0060e6;
+    font-size: 16px;
+    line-height: 30px; /* Высота строки делает текст центрированным по вертикали */
+    border-radius: 50%; /* Округление граней для создания круга */
+    text-align: center; /* Центрирование текста по горизонтали */
+    background-color: var(--primary-color-level4,rgba(0,105,255,0.065)); /* Фоновый цвет круга */
+    display: inline-block;
+    margin: 2px; /* Отступ, чтобы цифры не слипались */
 }
 
 .timeslot-list li {
@@ -180,12 +239,6 @@ body {
     font-weight: 700;
     margin-bottom: 5px;
     cursor: pointer;
-}
-
-.fc .fc-daygrid-day-number {
-    color: var(--text-color-level2,rgba(26,26,26,0.61)) !important;
-    font-size: 16px !important;
-    text-align: center !important;
 }
 
 .fc-theme-standard td, .fc-theme-standard th {
