--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     position: relative;
     margin-top: 66px;
     padding-top: 25px;
-    width: 65%;
+    width: 75%;
     border: 1px solid var(--text-color-level3,rgba(26,26,26,0.1));
     border-radius: 8px;
     box-shadow: 0 1px 8px 0 rgb(0 0 0/8%);
@@ -145,11 +145,10 @@ body {
 
 
 .fc .fc-button {
-    border: 0px !important ;
+    border: 0px !important;
 }
 
 .fc-col-header  {
-    width: 483px !important;
     margin-bottom: 10px;
 }
 
@@ -159,18 +158,25 @@ body {
     width: 60%;
 }
 
-.fc-scrollgrid-sync-table {
-    width: 483px !important;
+.fc-col-header.active {
+    max-width: 553px !important;
+    width: 100%;
+}
+
+.fc-scrollgrid-sync-table.active {
+    max-width: 553px !important;
+    width: 100%;
     height: 368px !important;
 }
 
+
 .fc-view-harness .fc-view-harness-active {
-    height: 368px !important;
+    max-height: 368px !important;
 }
 
 .timeslots-container {
     display: none;
-    width: 40%;
+    width: 35%;
 }
 
 
@@ -201,7 +207,7 @@ body {
 
 
 .timeslot-list::-webkit-scrollbar {
-    width: 5px;
+    width: 0px;
 }
 
 
@@ -230,29 +236,52 @@ body {
     align-items: center;
 }
 
-/* Стилизация текста даты */
 .fc-daygrid-day-number {
     cursor: pointer;
     width: 44px;
     height: 44px;
     color: #0060e6;
     font-size: 16px;
-    line-height: 30px; /* Высота строки делает текст центрированным по вертикали */
-    border-radius: 50%; /* Округление граней для создания круга */
-    text-align: center; /* Центрирование текста по горизонтали */
-    background-color: var(--primary-color-level4,rgba(0,105,255,0.065)); /* Фоновый цвет круга */
-    display: inline-block;
-    margin: 2px; /* Отступ, чтобы цифры не слипались */
+    line-height: 30px; 
+    border-radius: 50%; 
+    text-align: center; 
+    background-color: var(--primary-color-level4,rgba(0,105,255,0.065)); 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 2px;
+}
+
+.fc-daygrid-day-number.active {
+    background-color: var(--primary-color, rgb(0,105,255)); 
+    color: white; 
+    border-radius: 50%;
+}
+
+.fc-daygrid-day.fc-day-today {
+    background-color: #fff !important;
 }
 
 
+.timeslot-list {
+    max-width: 226px;
+}
+
 .timeslot-list li {
     padding: 10px;
+    max-width: 226px;
+    max-height: 52px;
+    vertical-align: top;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
     border: 1px solid var(--primary-color-level2,rgba(0,105,255,0.5));
     background-color: #ffffff;
     color: var(--primary-color,rgb(0,105,255));
     font-weight: 700;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     cursor: pointer;
 }
 
