--- a/email.css
+++ b/email.css
@@ -4,6 +4,10 @@ body {
     color: #c9d1d9; /* Светлый текст для контраста */
 }
 
+.container__email {
+    padding: 0 20px;
+}
+
 .form {
     max-width: 500px;
     margin: 20px auto;
@@ -66,6 +70,7 @@ body {
 
 /* Переопределение стилей для .form__button--secondary также нужно, если используется */
 .form__button--primary, .form__button--secondary {
+    max-width: 426px;
     width: 100%;
     font-size: 16px;
     background-color: #45a29e; /* Светлый зеленовато-голубой цвет */
@@ -88,7 +93,7 @@ body {
 
 .form__text,
 .form__disclaimer-top {
-    max-width: 400%;
+    max-width: 400px;
     width: 100%;
     margin-bottom: 15px;
     color: #c9d1d9; /* Светлый текст */
@@ -127,7 +132,8 @@ body {
     .form__input,
     .form__textarea {
         max-width: 240px;
-        width: 100%;
+        margin-right: 20px;
+        width: 90%;
         padding: 8px;
     }
 
